Правка апи профиля
